<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WeatherDetailFragment">

    <!-- Background Image -->

    <!-- Current Temperature -->

    <ImageView
        android:id="@+id/city_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/city_background_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/santiago_de_chile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Weather Icon -->
    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="18°"
        android:textColor="@android:color/white"
        android:textSize="64sp"
        app:layout_constraintEnd_toStartOf="@id/weather_icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/weather_icon_desc"

        android:src="@drawable/ic_sunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temperature" />

    <!-- City Name, Min/Max Temperature, and Map Icon -->
    <androidx.cardview.widget.CardView
        android:id="@+id/city_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/weather_icon"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:text="Santiago, Chile" />

                <ImageView
                    android:id="@+id/map_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/map_icon"
                    android:contentDescription="@string/map_icon_desc"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/min_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textSize="22sp"
                    android:layout_margin="16dp"
                    android:textColor="@android:color/black"
                    android:text="Min 22°" />

                <TextView
                    android:id="@+id/max_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_margin="16dp"
                    android:textColor="@android:color/black"
                    android:text="Max 32°" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

   <androidx.cardview.widget.CardView
       android:id="@+id/card_atmosphera"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/city_card"
       android:layout_margin="30dp"
       app:cardCornerRadius="20dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:padding="16dp"
           android:gravity="center_vertical">

           <TextView
               android:id="@+id/humidity"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textSize="16sp"
               android:textColor="@android:color/black"
               android:text="Humidity 64%" />

           <TextView
               android:id="@+id/pressure"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textSize="16sp"
               android:textColor="@android:color/black"
               android:text="Pressure 1015 hPa" />
       </LinearLayout>

   </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_atmosphera"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="Speed 3m/s" />

            <TextView
                android:id="@+id/wind_direction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="Direction 321° N" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/sunrise_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="Sunrise 6:00 AM" />

            <TextView
                android:id="@+id/sunset_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="Sunset 6:00 PM" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>



